<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Biometrics</string>
    
    <!-- Common use -->
    <string name="toast_no_sdcard_available">Please insert SD card into your phone</string>
    <string name="recognize_success">Hello, welcome back</string>
    <string name="recognize_failed">Sorry, we can not recognize you</string>
    <string name="txt_processing">Processing...</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_saving">Saving...</string>
    <string name="txt_recognizing">Recognizing...</string>
    
    <string name="train_failed">Problem when training, please train again</string>
    <string name="not_train_yet">Train your data before starting recognizing!!!</string>
    
    <!-- FACE -->
    <string name="toast_not_enough_faces">Capture %1$d faces at least and continue</string>
    <string name="toast_please_capture_your_face">Please capture your face first</string>
    <string name="toast_can_not_detect_face">No face detected, capture another, please.</string>
    <string name="recognize_face_confidence">Your confidence: %1$s</string>
    <string name="clear_all_faces">Clear all faces</string>
    
    <!-- VOICE -->
    <string name="toast_not_enough_voices">Record %1$d voices at least and continue</string>
    <string name="toast_please_record_your_voice">Please record your face first</string>
    <string name="clear_all_voices">Clear all voices</string>
    
    <!-- Settings -->
    <string name="pref_single_or_multiple">Recognition type</string>
    <string name="pref_single_or_multiple_summary">The type that this app does for you</string>
    <string name="pref_single_or_multiple_key">single_or_multiple</string>
    <string name="pref_single_or_multiple_dialog_title">Recognition type</string>
    
    <string name="pref_recognition_mode">Recognition mode</string>
    <string name="pref_recognition_mode_summary">Recognition step that application does</string>
    <string name="pref_recognition_mode_key">recognition_mode</string>
    <string name="pref_recognition_mode_dialog_title">Recognition mode</string>
    
    <string name="pref_confidence_threshold">Confidence threshold</string>
    <string name="pref_confidence_threshold_summary">Threshold for face recognition criteria, suggestion is 0.7</string>
    <string name="pref_confidence_threshold_key">confidence_threshold</string>
    <string name="pref_confidence_threshold_dialog_title">Choose confidence</string>

    <string name="pref_voice_distance_threshold">Distance threshold</string>
    <string name="pref_voice_distance_threshold_summary">Threshold for voice recognition criteria, suggestion is 600</string>
    <string name="pref_voice_distance_threshold_key">voice_distance</string>
    <string name="pref_voice_distance_threshold_dialog_title">Choose distance</string>
</resources>