<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Face settings" >
        <ListPreference
            android:defaultValue="0.5"
            android:dialogTitle="@string/pref_confidence_threshold_dialog_title"
            android:entries="@array/pref_confidence_threshold"
            android:entryValues="@array/pref_confidence_threshold"
            android:key="@string/pref_confidence_threshold_key"
            android:summary="@string/pref_confidence_threshold_summary"
            android:title="@string/pref_confidence_threshold" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/pref_single_or_multiple_dialog_title"
            android:entries="@array/pref_single_or_multiple_objects"
            android:entryValues="@array/pref_single_or_multiple_entry_values"
            android:key="@string/pref_single_or_multiple_key"
            android:summary="@string/pref_single_or_multiple_summary"
            android:title="@string/pref_single_or_multiple" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Voice settings" >
        <ListPreference
            android:defaultValue="600"
            android:dialogTitle="@string/pref_voice_distance_threshold_dialog_title"
            android:entries="@array/pref_voice_distance_threshold"
            android:entryValues="@array/pref_voice_distance_threshold"
            android:key="@string/pref_voice_distance_threshold_key"
            android:summary="@string/pref_voice_distance_threshold_summary"
            android:title="@string/pref_voice_distance_threshold" />
    </PreferenceCategory>

</PreferenceScreen>